// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkThemeProvider should correctly flatten the themeAttribute prop 1`] = `
<div
  style={
    Object {
      "--bpk-background": "black",
      "--bpk-color": "white",
    }
  }
>
  <p>
    Lorem Ipsum
  </p>
</div>
`;

exports[`BpkThemeProvider should render correctly 1`] = `
<div
  style={
    Object {
      "--bpk-color": "white",
    }
  }
>
  <p>
    Lorem Ipsum
  </p>
</div>
`;

exports[`BpkThemeProvider should render correctly with arbitrary props 1`] = `
<div
  id="arbitrary"
  style={
    Object {
      "--bpk-color": "white",
    }
  }
>
  <p>
    Lorem Ipsum
  </p>
</div>
`;

exports[`BpkThemeProvider should render without theming when theme is missing attributes 1`] = `
<div
  style={Object {}}
>
  <p>
    Lorem Ipsum
  </p>
</div>
`;

exports[`BpkThemeProvider should strip out extraneous theme attributes 1`] = `
<div
  style={
    Object {
      "--bpk-color": "white",
    }
  }
>
  <p>
    Lorem Ipsum
  </p>
</div>
`;
